--- a/inst/doc/dataRetrieval.Rnw
+++ b/inst/doc/dataRetrieval.Rnw
@@ -49,7 +49,7 @@
 \author[1]{Robert Hirsch}
 \affil[1]{United States Geological Survey}
 
-\SweaveOpts{highlight=TRUE, tidy=TRUE, keep.space=TRUE, keep.blank.space=FALSE, keep.comment=TRUE}
+\SweaveOpts{highlight=TRUE, tidy=TRUE, keep.space=TRUE, keep.blank.space=FALSE, keep.comment=TRUE, keep.source=FALSE}
 
 \maketitle
 \tableofcontents
@@ -123,9 +123,10 @@ library(dataRetrieval)
 
 \newpage
 %------------------------------------------------------------
-\section{Raw Data: USGS Web Retrieval Examples}
+\section{USGS Web Retrieval Examples}
 %------------------------------------------------------------ 
-In this section, we will run through 5 examples, documenting how to get raw data from the web. This includes historical daily values, real-time current values, water quality data, site information, and measured parameter information. 
+In this section, we will run through 5 examples, documenting how to get raw data from the web. This includes historical daily values, real-time current values, water quality data, site information, and measured parameter information. We will use the Choptank River near Greensboro, MD as an example.  The site-ID for this gage station is 01491000. Daily discharge measurements are available as far back as 1948.  Additionally, forms of nitrate have been measured dating back to 1964. The functions/examples in this section are for raw data retrieval.  This may or may not be the easiest data to work with.  In the next section, we will use functions that retrieve and process the data in a dataframe very friendly for R analysis.
+
 %------------------------------------------------------------
 \subsection{USGS Web Retrieval Introduction}
 %------------------------------------------------------------
@@ -170,129 +171,6 @@ print(data.table,
 @
 
 
-We will use the Choptank River near Greensboro, MD as an example.  The site-ID for this gage station is 01491000. Daily discharge measurements are available as far back as 1948.  Additionally, forms of nitrate and nitrogen have been measured dating back to 1964.
-
-%------------------------------------------------------------
-\subsection{USGS Daily Value Retrievals}
-%------------------------------------------------------------
-To obtain historic daily records of USGS data, use the retrieveNWISData function. The arguments for this function are siteNumber, parameterCd, startDate, endDate, statCd, and a logical (true/false) interactive. There are 2 default argument: statCd defaults to "00003" and interactive defaults to TRUE.  If you want to use the default values, you do not need to list them in the function call. Setting the 'interactive' option to true will walk you through the function. It might make more sense to run large batch collections with the interactive option set to FALSE. 
-
-The dates (start and end) need to be in the format "YYYY-MM-DD".  Setting the start date to "" will indicate to the program to ask for the earliest date, setting the end date to "" will ask for the latest available date.
-
-<<label=getNWISDaily, echo=TRUE>>=
-# Using defaults:
-siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
-parameterCd <- "00060"  # Discharge in cubic feet per second
-startDate <- ""
-endDate <- ""
-
-discharge <- retrieveNWISData(siteNumber, parameterCd, startDate, endDate)
-@
-
-A dataframe is returned that looks like the following:
-<<dischargeData, echo=FALSE>>=
-head(discharge)
-@
-The structure of the dataframe is:
-<<dischargeStruture, echo=FALSE>>=
-str(discharge)
-@
-Note that dateTime is automatically imported as a Date. Each requested parameter has a value and remark code column.  The names of these columns depend on the requested parameter and stat code combinations. USGS remark codes are often "A" (approved for publication) or "P" (provisional data subject to revision). A more complete list of remark codes can be found here:
-\url{http://waterdata.usgs.gov/usa/nwis/help?codes_help}
-
-Another example that doesn't use the defaults would be a request for mean and maximum daily temperature and discharge in early 2012:
-<<label=getNWIStemperature, echo=TRUE>>=
-# Using defaults:
-siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
-parameterCd <- "00010,00060"  # Temperature and discharge
-statCd <- "00001,00003"  #mean and maximum
-startDate <- "2012-01-01"
-endDate <- "2012-06-30"
-
-temperatureAndFlow <- retrieveNWISData(siteNumber, parameterCd, 
-                  startDate, endDate, StatCd=statCd,interactive=FALSE)
-@
-
-Daily data is pulled from \url{http://waterservices.usgs.gov/rest/DV-Test-Tool.html}. 
-
-An example of plotting the above data:
-<<label=getNWIStemperaturePlot, echo=TRUE>>=
-par(mar=c(5,4,4,5)+.1)
-with(temperatureAndFlow, plot(
-  datetime, X01_00010_00003,
-  xlab="Date",ylab="Temperature [C]"
-  ))
-par(new=TRUE)
-with(temperatureAndFlow, plot(
-  datetime, X02_00060_00003,
-  col="red",type="l",xaxt="n",yaxt="n",xlab="",ylab="",axes=FALSE
-  ))
-axis(4,col="red",col.axis="red")
-mtext("Discharge [cfs]",side=4,line=3,col="red")
-@
-\begin{figure}
-\begin{center}
-<<label=fig1, fig=TRUE,echo=FALSE>>=
-<<getNWIStemperaturePlot>>
-@
-\end{center}
-\caption{Temperature and discharge plot of Choptank River.}
-\end{figure}
-
-There are occasions where NWIS values are not reported as numbers, instead there might be text describing a certain event such as "Ice".  Any value that cannot be converted to a number will be reported as NA in this package.
-
-%------------------------------------------------------------
-\subsection{USGS Unit Value Retrievals}
-%------------------------------------------------------------
-We can also get real-time, instantaneous measurements using the retrieveUnitNWISData function:
-<<label=getNWISUnit, echo=TRUE>>=
-# Using defaults:
-siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
-parameterCd <- "00060"  # Discharge in cubic feet per second
-startDate <- as.character(Sys.Date())
-endDate <- as.character(Sys.Date())
-
-dischargeToday <- retrieveUnitNWISData(siteNumber, parameterCd, startDate, endDate)
-@
-Which produces the following dataframe:
-<<dischargeData, echo=FALSE>>=
-head(dischargeToday)
-@
-The structure of the dataframe is:
-<<dischargeStruture, echo=FALSE>>=
-str(dischargeToday)
-@
-Note that time now becomes important, so the dateTime is a POSIXct, and the time zone is included. Data is pulled from \url{http://waterservices.usgs.gov/rest/IV-Test-Tool.html}. There are occasions where NWIS values are not reported as numbers, instead a common example is "Ice".  Any value that cannot be converted to a number will be reported as NA in this package.
-
-%------------------------------------------------------------
-\subsection{USGS Water Quality Retrievals}
-%------------------------------------------------------------
-Finally, we can use the dataRetrieval package to get water quality data that is available on the water quality data portal: \url{http://www.waterqualitydata.us/}. The function is getQWData, with the similar input arguments: siteNumber, parameterCd, startDate, endDate, and interactive. The difference is in parameterCd, in this function multiple parameters can be queried using a ";" separator, and setting parameterCd <- "" will return all of the measured observations.
-
-<<label=getQW, echo=TRUE>>=
-# Using defaults:
-siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
-parameterCd <- "00618;71851"  # Dissolved Nitrate parameter codes (one as mg/l as N, one as mg/l)
-startDate <- "1964-06-11"
-endDate <- "2012-12-18"
-
-dissolvedNitrate <- getRawQWData(siteNumber, parameterCd, startDate, endDate)
-@
-
-Producing a dataframe with the following columns:
-<<dischargeData, echo=FALSE>>=
-names(dissolvedNitrate)
-@
-
-To get a simplified dataframe that contains only datetime, value, and qualifier, use the function getQWData:
-
-<<label=getQWData, echo=TRUE>>=
-dissolvedNitrateSimple <- getQWData(siteNumber, parameterCd, startDate, endDate)
-head(dissolvedNitrateSimple)
-@
-Note that in this dataframe, datatime is only imported as Dates (no times are included), and the qualifier is either blank or "<" signifying a censored value.
-
-
 %------------------------------------------------------------
 \subsection{USGS Site Information Retrievals}
 %------------------------------------------------------------
@@ -334,22 +212,207 @@ parameterINFO$parameter_nm
 Parameter information is obtained from \url{http://nwis.waterdata.usgs.gov/nwis/pmcodes/}
 
 
+
+%------------------------------------------------------------
+\subsection{USGS Daily Value Retrievals}
+%------------------------------------------------------------
+To obtain historic daily records of USGS data, use the retrieveNWISData function. The arguments for this function are siteNumber, parameterCd, startDate, endDate, statCd, and a logical (true/false) interactive. There are 2 default argument: statCd defaults to "00003" and interactive defaults to TRUE.  If you want to use the default values, you do not need to list them in the function call. Setting the 'interactive' option to true will walk you through the function. It might make more sense to run large batch collections with the interactive option set to FALSE. 
+
+The dates (start and end) need to be in the format "YYYY-MM-DD".  Setting the start date to "" will indicate to the program to ask for the earliest date, setting the end date to "" will ask for the latest available date.
+
+<<label=getNWISDaily, echo=TRUE>>=
+# Using defaults:
+siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
+parameterCd <- "00060"  # Discharge in cubic feet per second
+startDate <- ""  # Will ask to start request at earliest date
+endDate <- "" # Will ask to finish request at latest date
+
+discharge <- retrieveNWISData(siteNumber, parameterCd, startDate, endDate)
+@
+
+A dataframe is returned that looks like the following:
+<<dischargeData, echo=FALSE>>=
+head(discharge)
+@
+The structure of the dataframe is:
+<<dischargeStruture, echo=FALSE>>=
+str(discharge)
+@
+Note that dateTime is automatically imported as a Date. Each requested parameter has a value and remark code column.  The names of these columns depend on the requested parameter and stat code combinations. USGS remark codes are often "A" (approved for publication) or "P" (provisional data subject to revision). A more complete list of remark codes can be found here:
+\url{http://waterdata.usgs.gov/usa/nwis/help?codes_help}
+
+Another example that doesn't use the defaults would be a request for mean and maximum daily temperature and discharge in early 2012:
+<<label=getNWIStemperature, echo=TRUE>>=
+# Using defaults:
+siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
+parameterCd <- "00010,00060"  # Temperature and discharge
+statCd <- "00001,00003"  #mean and maximum
+startDate <- "2012-01-01"
+endDate <- "2012-06-30"
+
+temperatureAndFlow <- retrieveNWISData(siteNumber, parameterCd, 
+                  startDate, endDate, StatCd=statCd,interactive=FALSE)
+@
+
+Daily data is pulled from \url{http://waterservices.usgs.gov/rest/DV-Test-Tool.html}. 
+
+An example of plotting the above data (Figure 1):
+<<echo=FALSE>>=
+options(continue=" ")
+options(SweaveHooks=list(fig=function()
+  par(mar=c(4.1,4.1,1.1,4.1),oma=c(0,0,0,0))))
+@
+
+<<label=getNWIStemperaturePlot, echo=TRUE>>=
+
+with(temperatureAndFlow, plot(
+  datetime, X01_00010_00003,
+  xlab="Date",ylab="Temperature [C]"
+  ))
+par(new=TRUE)
+with(temperatureAndFlow, plot(
+  datetime, X02_00060_00003,
+  col="red",type="l",xaxt="n",yaxt="n",xlab="",ylab="",axes=FALSE
+  ))
+axis(4,col="red",col.axis="red")
+mtext("Discharge [cfs]",side=4,line=3,col="red")
+@
+\newpage
+
+\begin{figure}
+\begin{center}
+<<label=fig1, fig=TRUE,echo=FALSE,width=6,height=4>>=
+<<getNWIStemperaturePlot>>
+@
+\end{center}
+\caption{Temperature and discharge plot of Choptank River in 2012.}
+\end{figure}
+
+
+There are occasions where NWIS values are not reported as numbers, instead there might be text describing a certain event such as "Ice".  Any value that cannot be converted to a number will be reported as NA in this package.
+
+
+
+
+%------------------------------------------------------------
+\subsection{USGS Unit Value Retrievals}
+%------------------------------------------------------------
+We can also get real-time, instantaneous measurements using the retrieveUnitNWISData function:
+<<label=getNWISUnit, echo=TRUE>>=
+# Using defaults:
+siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
+parameterCd <- "00060"  # Discharge in cubic feet per second
+startDate <- as.character(Sys.Date()-1) # Yesterday
+endDate <- as.character(Sys.Date()) # Today
+
+dischargeToday <- retrieveUnitNWISData(siteNumber, parameterCd, startDate, endDate)
+@
+Which produces the following dataframe:
+<<dischargeData, echo=FALSE>>=
+head(dischargeToday)
+@
+The structure of the dataframe is:
+<<dischargeStruture, echo=FALSE>>=
+str(dischargeToday)
+@
+Note that time now becomes important, so the dateTime is a POSIXct, and the time zone is included. Data is pulled from \url{http://waterservices.usgs.gov/rest/IV-Test-Tool.html}. There are occasions where NWIS values are not reported as numbers, instead a common example is "Ice".  Any value that cannot be converted to a number will be reported as NA in this package.
+
+A simple plotting example is shown in Figure 2:
+<<label=getNWISUnit, echo=TRUE>>=
+
+with(dischargeToday, plot(
+  datetime, X02_00060,
+  xlab="Date/Time",ylab="Discharge [cfs]"
+  ))
+@
+\newpage
+
+\begin{figure}
+\begin{center}
+<<label=fig2, fig=TRUE,echo=FALSE,width=6,height=4>>=
+<<getNWISUnit>>
+@
+\end{center}
+\caption{Real-time discharge plot of Choptank River.}
+\end{figure}
+
+
+%------------------------------------------------------------
+\subsection{USGS Water Quality Retrievals}
+%------------------------------------------------------------
+Finally, we can use the dataRetrieval package to get water quality data that is available on the water quality data portal: \url{http://www.waterqualitydata.us/}. The raw data us obtained from the function  getRawQWData, with the similar input arguments: siteNumber, parameterCd, startDate, endDate, and interactive. The difference is in parameterCd, in this function multiple parameters can be queried using a ";" separator, and setting parameterCd <- "" will return all of the measured observations. The raw data can be overwelming (as will be demonstrated), a simplified version of the data can be obtained using getQWData.
+
+
+<<label=getQW, echo=TRUE>>=
+# Using defaults:
+siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
+parameterCd <- "00618;71851"  # Dissolved Nitrate parameter codes (one as mg/l as N, one as mg/l)
+startDate <- "1964-06-11"
+endDate <- "2012-12-18"
+
+dissolvedNitrate <- getRawQWData(siteNumber, parameterCd, startDate, endDate)
+@
+
+Producing a dataframe with the following columns:
+<<dischargeData, echo=FALSE>>=
+names(dissolvedNitrate)
+@
+
+To get a simplified dataframe that contains only datetime, value, and qualifier, use the function getQWData:
+
+<<label=getQWData, echo=TRUE>>=
+dissolvedNitrateSimple <- getQWData(siteNumber, parameterCd, startDate, endDate)
+head(dissolvedNitrateSimple)
+@
+Note that in this dataframe, datatime is only imported as Dates (no times are included), and the qualifier is either blank or "<" signifying a censored value.
+
+An example of plotting the above data (Figure 3):
+
+<<label=getQWtemperaturePlot, echo=TRUE>>=
+
+with(dissolvedNitrateSimple, plot(
+  dateTime, value.00618,
+  xlab="Date",ylab = paste(parameterINFO$srsname, "[",parameterINFO$parameter_units,"]")
+  ))
+@
+\newpage
+
+\begin{figure}
+\begin{center}
+<<label=fig3, fig=TRUE,echo=FALSE,width=6,height=4>>=
+<<getQWtemperaturePlot>>
+@
+\end{center}
+\caption{Nitrate plot of Choptank River.}
+\end{figure}
+
+
+
 %------------------------------------------------------------
 \section{Polished Data: USGS Web Retrieval Examples}
 %------------------------------------------------------------ 
-In this example, we use 3 dataRetrieval functions to get daily streamflow data and inorganic nitrogen sample results, and site information for a USGS gaging station with the ID 06934500.  The station is Missouri River at Hermann, MO (which is discovered in the INFO dataset). Rather than see the raw output from NWIS, we will get more polished returned data frames.  These data frames were exclusively designed to work with the EGRET R package, however can be very useful for all hydrologic studies.
+Rather than using raw data as retrieved by the web, the dataRetrieval package also includes functions that return the data in a structure that has been designed to work with the EGRET R package. In general, these dataframes may be much more 'R-friendly' than the raw data, and will contain additional information that allows for efficient data analysis.
+
+In this section, we use 3 dataRetrieval functions to get sufficient data to perform an EGRET analysis.  We will continue analyzing the Choptank River. We will need essentially the same data that was retrieved in the previous section, but we will get the daily discharge values in a dataframe called Daily, the nitrate sample data in a dataframe called Sample, and the data about the station and parameters in a dataframe called INFO. These are the dataframes that were exclusively designed to work with the EGRET R package, however can be very useful for all hydrologic studies.
+
+The funtion to obtain the daily values (discharge in this case) is getDVData.  It requires the inputs siteNumber, ParameterCd, StartDate, EndDate, interactive, and convert. Most of these arguments are described in the previous section, however 'convert' is a new argument, it's default is TRUE, and it tells the program to convert the values from cfs to cms. If you don't want this conversion, set convert=FALSE in the function call.
+
+The function to obtain sample data from the water quality portal is getSampleData. The arguments for this function are also siteNumber, ParameterCd, StartDate, EndDate, interactive.
+
 
 
 <<firstExample>>=
-Daily <- getDVData("06934500","00060","1970-10-01","2011-09-30")
-head(Daily)
-Sample <-getSampleData("06934500","00631","1970-10-01","2011-09-30")
-head(Sample)
-INFO <-getMetaData("06934500","00631", interactive=FALSE)
-colnames(INFO)
-INFO$station.nm
+siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
+parameterCd <- "00631"  # Nitrate
+startDate <- "1964-01-01"
+endDate <- "2013-01-01"
+
+Daily <- getDVData(siteNumber, "00060", startDate, endDate)
+Sample <-getSampleData(siteNumber,parameterCd,startDate, endDate)
+INFO <-getMetaData(siteNumber,parameterCd, interactive=FALSE)
 
 Sample <- mergeReport()
+head(Sample)
 @
 
 \newpage
