--- a/inst/doc/dataRetrieval.Rnw
+++ b/inst/doc/dataRetrieval.Rnw
@@ -49,7 +49,7 @@
 \author[1]{Robert Hirsch}
 \affil[1]{United States Geological Survey}
 
-\SweaveOpts{highlight=TRUE, tidy=TRUE, keep.space=TRUE, keep.blank.space=FALSE, keep.comment=TRUE, keep.source=FALSE}
+\SweaveOpts{highlight=TRUE, tidy=TRUE, keep.space=TRUE, keep.blank.space=FALSE, keep.comment=TRUE, keep.source=TRUE}
 
 \maketitle
 \tableofcontents
@@ -61,67 +61,9 @@ The dataRetrieval package was created to simplify the process of getting hydrolo
 
 There is a plethora of hydrological data available on the web. This package is designed specifically to load United States Geological Survey (USGS) hydrologic data to the R enviornment. This includes daily values, real-time (unit values), site information, and water quality sample data. 
 
-%------------------------------------------------------------ 
-\section{Getting Started}
-%------------------------------------------------------------ 
-This section describes the options for downloading and installing the dataRetrieval package.
-%------------------------------------------------------------
-\subsection{New to R?}
-%------------------------------------------------------------ 
-If you are new to R, you will need to first install the latest version of R, which can be found here: \url{http://www.r-project.org/}.
+For information on getting started in R, downloading and installing the package, see Appendix 1: Getting Started.
 
-There are many options for running and editing R code, one nice enviornment to learn R is RStudio. RStudio can be downloaded here: \url{http://rstudio.org/}. Once R and RStudio are installed, the dataRetrieval package needs to be installed as described in the next section.
 
-%------------------------------------------------------------
-\subsection{R User: Installing dataRetrieval from downloaded binary}
-%------------------------------------------------------------ 
-The latest dataRetrieval package build is available for download at \url{https://github.com/USGS-R/dataRetrieval/blob/master/dataRetrieval_1.2.1.tar.gz}.  If the package's tar.gz file is saved in R's working directory, then the following command will fully install the package:
-
-<<installFromWD,eval = FALSE>>=
-install.packages("dataRetrieval_1.2.1.tar.gz", 
-                 repos=NULL, type="source")
-@
-
-If the downloaded file is stored in an alternative location, include the path in the install command.  A Windows example looks like this (notice the direction of the slashes, they are in the opposite direction that Windows normally creates paths):
-
-<<installFromFile,eval = FALSE>>=
-install.packages(
-  "C:/RPackages/Statistics/dataRetrieval_1.2.1.tar.gz", 
-  repos=NULL, type="source")
-@
-
-A Mac example looks like this:
-
-<<maxExample,eval = FALSE>>=
-install.packages(
-  "/Users/userA/RPackages/Statistic/dataRetrieval_1.2.1.tar.gz", 
-  repos=NULL, type="source")
-@
-
-It is a good idea to re-start the R enviornment after installing the package, especially if installing an updated version (that is, restart RStudio). Some users have found it necessary to delete the previous version's package folder before installing newer version of dataRetrieval. If you are experiencing issues after updating a package, trying deleting the package folder - the default location for Windows is something like this: C:/Users/userA/Documents/R/win-library/2.15/dataRetrieval, and the default for a Mac: /Users/userA/Library/R/2.15/library/dataRetrieval. Then, re-install the package using the directions above. Moving to CRAN should solve this problem.
-
-After installing the package, you need to open the library each time you re-start R.  This is done with the simple command:
-<<openLibraryTest, eval=FALSE>>=
-library(dataRetrieval)
-@
-Using RStudio, you could alternatively click on the checkbox for dataRetrieval in the Packages window.
-
-%------------------------------------------------------------
-\subsection{R Developers: Installing dataRetrieval from gitHub}
-%------------------------------------------------------------
-Alternatively, R-developers can install the latest version of dataRetrieval directly from gitHub using the devtools package.  devtools is available on CRAN.  Simpley type the following commands into R to install the latest version of dataRetrieval available on gitHub.  Rtools (for Windows) and latex tools are required.
-
-<<gitInstal,eval = FALSE>>=
-library(devtools)
-install_github("dataRetrieval", "USGS-R")
-@
-To then open the library, simply type:
-
-<<openLibrary>>=
-library(dataRetrieval)
-@
-
-\newpage
 %------------------------------------------------------------
 \section{USGS Web Retrieval Examples}
 %------------------------------------------------------------ 
@@ -176,18 +118,16 @@ print(data.table,
 %------------------------------------------------------------
 To obtain all of the available site information, use the getSiteFileData function:
 <<label=getSite, echo=TRUE>>=
+library(dataRetrieval)
+
 # Using defaults:
 siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
-ChopTankInfo <- getSiteFileData(siteNumber)
+ChoptankInfo <- getSiteFileData(siteNumber)
 @
 
-The available data for these for the USGS sites are:
-<<siteColnames, echo=TRUE>>=
-colnames(ChopTankInfo)
-@
-Pulling out a specific example piece of information, in this case station name can be done as follows:
+The available returned data for these for the USGS sites can be viewed in Appendix 2: getSiteFileData. Pulling out a specific example piece of information, in this case station name can be done as follows:
 <<siteNames, echo=TRUE>>=
-ChopTankInfo$station.nm
+ChoptankInfo$station.nm
 @
 Site information is obtained from \url{http://waterservices.usgs.gov/rest/Site-Test-Tool.html}
 
@@ -201,11 +141,7 @@ parameterCd <- "00618"
 parameterINFO <- getParameterInfo(parameterCd)
 @
 
-The available data for these for the USGS sites are:
-<<siteColnames, echo=TRUE>>=
-colnames(parameterINFO)
-@
-Pulling out a specific example piece of information, in this case station name can be done as follows:
+The available data for these parameters can be seen in Appendix 2: getParameterInfo. Pulling out a specific example piece of information, in this case station name can be done as follows:
 <<siteNames, echo=TRUE>>=
 parameterINFO$parameter_nm
 @
@@ -234,11 +170,7 @@ A dataframe is returned that looks like the following:
 <<dischargeData, echo=FALSE>>=
 head(discharge)
 @
-The structure of the dataframe is:
-<<dischargeStruture, echo=FALSE>>=
-str(discharge)
-@
-Note that dateTime is automatically imported as a Date. Each requested parameter has a value and remark code column.  The names of these columns depend on the requested parameter and stat code combinations. USGS remark codes are often "A" (approved for publication) or "P" (provisional data subject to revision). A more complete list of remark codes can be found here:
+The structure of the dataframe can be seen in Appendix 2: retrieveNWISData. The variable datetime is automatically imported as a Date. Each requested parameter has a value and remark code column.  The names of these columns depend on the requested parameter and stat code combinations. USGS remark codes are often "A" (approved for publication) or "P" (provisional data subject to revision). A more complete list of remark codes can be found here:
 \url{http://waterdata.usgs.gov/usa/nwis/help?codes_help}
 
 Another example that doesn't use the defaults would be a request for mean and maximum daily temperature and discharge in early 2012:
@@ -302,8 +234,10 @@ We can also get real-time, instantaneous measurements using the retrieveUnitNWIS
 # Using defaults:
 siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
 parameterCd <- "00060"  # Discharge in cubic feet per second
-startDate <- as.character(Sys.Date()-1) # Yesterday
-endDate <- as.character(Sys.Date()) # Today
+startDate <- as.character(Sys.Date()-1) # Yesterday 
+  # (or, the day before the dataRetrieval package was built)
+endDate <- as.character(Sys.Date()) # Today 
+  # (or, the day the dataRetrieval package was built)
 
 dischargeToday <- retrieveUnitNWISData(siteNumber, parameterCd, startDate, endDate)
 @
@@ -311,11 +245,7 @@ Which produces the following dataframe:
 <<dischargeData, echo=FALSE>>=
 head(dischargeToday)
 @
-The structure of the dataframe is:
-<<dischargeStruture, echo=FALSE>>=
-str(dischargeToday)
-@
-Note that time now becomes important, so the dateTime is a POSIXct, and the time zone is included. Data is pulled from \url{http://waterservices.usgs.gov/rest/IV-Test-Tool.html}. There are occasions where NWIS values are not reported as numbers, instead a common example is "Ice".  Any value that cannot be converted to a number will be reported as NA in this package.
+The structure of the dataframe is can be seen in Appendix 2: retrieveUnitNWISData. Note that time now becomes important, so the variable datetime is a POSIXct, and the time zone is included in a separate column. Data is pulled from \url{http://waterservices.usgs.gov/rest/IV-Test-Tool.html}. There are occasions where NWIS values are not reported as numbers, instead a common example is "Ice".  Any value that cannot be converted to a number will be reported as NA in this package.
 
 A simple plotting example is shown in Figure 2:
 <<label=getNWISUnit, echo=TRUE>>=
@@ -345,20 +275,16 @@ Finally, we can use the dataRetrieval package to get water quality data that is 
 
 <<label=getQW, echo=TRUE>>=
 # Using defaults:
-siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
-parameterCd <- "00618;71851"  # Dissolved Nitrate parameter codes (one as mg/l as N, one as mg/l)
+siteNumber <- "01491000" # Site ID for Choptank River
+# Dissolved Nitrate parameter codes (one as mg/l as N, one as mg/l):
+parameterCd <- "00618;71851"  
 startDate <- "1964-06-11"
 endDate <- "2012-12-18"
 
 dissolvedNitrate <- getRawQWData(siteNumber, parameterCd, startDate, endDate)
 @
 
-Producing a dataframe with the following columns:
-<<dischargeData, echo=FALSE>>=
-names(dissolvedNitrate)
-@
-
-To get a simplified dataframe that contains only datetime, value, and qualifier, use the function getQWData:
+There is a large amount of data returned for each observation. The available data can be viewed in Appendix 2: getRawQWData. To get a simplified dataframe that contains only datetime, value, and qualifier, use the function getQWData:
 
 <<label=getQWData, echo=TRUE>>=
 dissolvedNitrateSimple <- getQWData(siteNumber, parameterCd, startDate, endDate)
@@ -391,14 +317,17 @@ with(dissolvedNitrateSimple, plot(
 %------------------------------------------------------------
 \section{Polished Data: USGS Web Retrieval Examples}
 %------------------------------------------------------------ 
-Rather than using raw data as retrieved by the web, the dataRetrieval package also includes functions that return the data in a structure that has been designed to work with the EGRET R package. In general, these dataframes may be much more 'R-friendly' than the raw data, and will contain additional information that allows for efficient data analysis.
+Rather than using raw data as retrieved by the web, the dataRetrieval package also includes functions that return the data in a structure that has been designed to work with the EGRET R package (\url{https://github.com/USGS-R/EGRET/wiki}). In general, these dataframes may be much more 'R-friendly' than the raw data, and will contain additional information that allows for efficient data analysis.
 
 In this section, we use 3 dataRetrieval functions to get sufficient data to perform an EGRET analysis.  We will continue analyzing the Choptank River. We will need essentially the same data that was retrieved in the previous section, but we will get the daily discharge values in a dataframe called Daily, the nitrate sample data in a dataframe called Sample, and the data about the station and parameters in a dataframe called INFO. These are the dataframes that were exclusively designed to work with the EGRET R package, however can be very useful for all hydrologic studies.
 
 The funtion to obtain the daily values (discharge in this case) is getDVData.  It requires the inputs siteNumber, ParameterCd, StartDate, EndDate, interactive, and convert. Most of these arguments are described in the previous section, however 'convert' is a new argument, it's default is TRUE, and it tells the program to convert the values from cfs to cms. If you don't want this conversion, set convert=FALSE in the function call.
 
-The function to obtain sample data from the water quality portal is getSampleData. The arguments for this function are also siteNumber, ParameterCd, StartDate, EndDate, interactive.
+The function to obtain sample data from the water quality portal is getSampleData. The arguments for this function are also siteNumber, ParameterCd, StartDate, EndDate, interactive. These are the same inputs as getRawQWData or getQWData as described in the previous section.
 
+The function to obtain "metadata", data about the gage station and measured parameters is getMetaData. This function essentially combines getSiteFileData and getParameterInfo, producing one dataframe called INFO.
+
+The structure of each dataframe can be seen in Appendix 2.
 
 
 <<firstExample>>=
@@ -416,6 +345,169 @@ head(Sample)
 @
 
 \newpage
+%------------------------------------------------------------ 
+\section{Appendix 1: Getting Started}
+%------------------------------------------------------------ 
+This section describes the options for downloading and installing the dataRetrieval package.
+
+%------------------------------------------------------------
+\subsection{New to R?}
+%------------------------------------------------------------ 
+If you are new to R, you will need to first install the latest version of R, which can be found here: \url{http://www.r-project.org/}.
+
+There are many options for running and editing R code, one nice enviornment to learn R is RStudio. RStudio can be downloaded here: \url{http://rstudio.org/}. Once R and RStudio are installed, the dataRetrieval package needs to be installed as described in the next section.
+
+%------------------------------------------------------------
+\subsection{R User: Installing dataRetrieval from downloaded binary}
+%------------------------------------------------------------ 
+The latest dataRetrieval package build is available for download at \url{https://github.com/USGS-R/dataRetrieval/blob/master/dataRetrieval_1.2.1.tar.gz}.  If the package's tar.gz file is saved in R's working directory, then the following command will fully install the package:
+
+<<installFromWD,eval = FALSE>>=
+install.packages("dataRetrieval_1.2.1.tar.gz", 
+                 repos=NULL, type="source")
+@
+
+If the downloaded file is stored in an alternative location, include the path in the install command.  A Windows example looks like this (notice the direction of the slashes, they are in the opposite direction that Windows normally creates paths):
+
+<<installFromFile,eval = FALSE>>=
+install.packages(
+  "C:/RPackages/Statistics/dataRetrieval_1.2.1.tar.gz", 
+  repos=NULL, type="source")
+@
+
+A Mac example looks like this:
+
+<<maxExample,eval = FALSE>>=
+install.packages(
+  "/Users/userA/RPackages/Statistic/dataRetrieval_1.2.1.tar.gz", 
+  repos=NULL, type="source")
+@
+
+It is a good idea to re-start the R enviornment after installing the package, especially if installing an updated version (that is, restart RStudio). Some users have found it necessary to delete the previous version's package folder before installing newer version of dataRetrieval. If you are experiencing issues after updating a package, trying deleting the package folder - the default location for Windows is something like this: C:/Users/userA/Documents/R/win-library/2.15/dataRetrieval, and the default for a Mac: /Users/userA/Library/R/2.15/library/dataRetrieval. Then, re-install the package using the directions above. Moving to CRAN should solve this problem.
+
+After installing the package, you need to open the library each time you re-start R.  This is done with the simple command:
+<<openLibraryTest, eval=FALSE>>=
+library(dataRetrieval)
+@
+Using RStudio, you could alternatively click on the checkbox for dataRetrieval in the Packages window.
+
+%------------------------------------------------------------
+\subsection{R Developers: Installing dataRetrieval from gitHub}
+%------------------------------------------------------------
+Alternatively, R-developers can install the latest version of dataRetrieval directly from gitHub using the devtools package.  devtools is available on CRAN.  Simpley type the following commands into R to install the latest version of dataRetrieval available on gitHub.  Rtools (for Windows) and appropriate \LaTeX\ tools are required.
+
+<<gitInstal,eval = FALSE>>=
+library(devtools)
+install_github("dataRetrieval", "USGS-R")
+@
+To then open the library, simply type:
+
+<<openLibrary>>=
+library(dataRetrieval)
+@
+
+\newpage
+%------------------------------------------------------------ 
+\section{Appendix 2: Dataframe column names and data types}
+%------------------------------------------------------------ 
+This section shows the returned dataframe structures for the functions.  The requested data is the same as in earlier sections of this document:
+<<label=appendix1, echo=TRUE, eval=FALSE>>=
+library(dataRetrieval)
+
+siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
+parameterCd <- "00631"  # Nitrate
+startDate <- "1964-01-01"
+endDate <- "2013-01-01"
+
+@
+
+%------------------------------------------------------------
+\subsection{getSiteFileData}
+%------------------------------------------------------------
+<<siteColnames, echo=TRUE>>=
+ChoptankInfo <- getSiteFileData(siteNumber)
+str(ChoptankInfo)
+@
+
+%------------------------------------------------------------
+\subsection{getParameterInfo}
+%------------------------------------------------------------
+<<parameterINFOData, echo=TRUE>>=
+parameterINFO <- getParameterInfo(parameterCd, interactive=FALSE)
+str(parameterINFO)
+@
+
+%------------------------------------------------------------
+\subsection{getMetaData}
+%------------------------------------------------------------
+<<InfoData, echo=TRUE>>=
+INFO <- getMetaData(siteNumber,parameterCd, interactive=FALSE)
+str(INFO)
+@
+
+%------------------------------------------------------------
+\subsection{retrieveNWISData}
+%------------------------------------------------------------
+<<temperatureAndFlowInfo, echo=TRUE>>=
+parameterCd <- "00010,00060"  # Temperature and discharge
+statCd <- "00001,00003"  #mean and maximum
+startDate <- "2012-01-01"
+endDate <- "2012-06-30"
+
+temperatureAndFlow <- retrieveNWISData(siteNumber, parameterCd, 
+       startDate, endDate, StatCd=statCd,interactive=FALSE)
+str(temperatureAndFlow)
+@
+
+%------------------------------------------------------------
+\subsection{retrieveUnitNWISData}
+%------------------------------------------------------------
+<<dischargeToday, echo=TRUE>>=
+parameterCd <- "00060"  # Discharge in cubic feet per second
+startDate <- as.character(Sys.Date()-1) # Yesterday 
+  # (or, the day before the dataRetrieval package was built)
+endDate <- as.character(Sys.Date()) # Today 
+  # (or, the day the dataRetrieval package was built)
+
+dischargeToday <- retrieveUnitNWISData(siteNumber, parameterCd, startDate, endDate)
+str(dischargeToday)
+@
+
+%------------------------------------------------------------
+\subsection{getDVData}
+%------------------------------------------------------------
+<<getDVData, echo=TRUE>>=
+startDate <- "1964-01-01"
+endDate <- "2013-01-01"
+Daily <- getDVData(siteNumber, "00060", startDate, endDate)
+str(Daily)
+@
+
+%------------------------------------------------------------
+\subsection{getRawQWData}
+%------------------------------------------------------------
+<<dissolvedNitrateData, echo=TRUE>>=
+parameterCd <- "00618;71851"  
+dissolvedNitrate <- getRawQWData(siteNumber, parameterCd, startDate, endDate)
+str(dissolvedNitrate)
+@
+
+%------------------------------------------------------------
+\subsection{getQWData}
+%------------------------------------------------------------
+<<QWData, echo=TRUE>>=
+dissolvedNitrateSimple <- getQWData(siteNumber, parameterCd, startDate, endDate)
+str(dissolvedNitrateSimple)
+@
+
+%------------------------------------------------------------
+\subsection{getSampleData}
+%------------------------------------------------------------
+<<sampleData, echo=TRUE>>=
+Sample <-getSampleData(siteNumber,parameterCd,startDate, endDate)
+str(Sample)
+@
+
 
 %------------------------------------------------------------
 % BIBLIO
