--- a/inst/doc/dataRetrieval.tex
+++ b/inst/doc/dataRetrieval.tex
@@ -81,7 +81,7 @@ Once the site-ID is known, the next required input for USGS data retrievals is t
 Not every station will measure all parameters. The following is a list of commonly measured parameters:
 
 % latex table generated in R 2.15.2 by xtable 1.7-0 package
-% Thu Jan 24 10:35:50 2013
+% Thu Jan 24 13:50:01 2013
 \begin{table}[ht]
 \begin{center}
 \caption{Commonly found USGS Parameter Codes}
@@ -104,7 +104,7 @@ For real-time data, the parameter code and site ID will suffice.  The USGS store
 
 The most common stat codes are:
 % latex table generated in R 2.15.2 by xtable 1.7-0 package
-% Thu Jan 24 10:35:50 2013
+% Thu Jan 24 13:50:01 2013
 \begin{table}[ht]
 \begin{center}
 \caption{Commonly found USGS Stat Codes}
@@ -423,6 +423,99 @@ If there are any zero discharge days, all days had 0 cubic meters per second add
 \end{Soutput}
 \end{Schunk}
 
+The difference between these dataframes, and the dataframes in the previous sections is that ...
+
+
+\newpage
+%------------------------------------------------------------ 
+\section{Retrieving User Generated Data Files}
+%------------------------------------------------------------ 
+Aside from retrieving data from the USGS web services, the dataRetrieval package includes functions to generate the Daily and Sample data frame from local files.
+
+%------------------------------------------------------------ 
+\subsection{getDailyDataFromFile}
+%------------------------------------------------------------ 
+getDailyDataFromFile will load a user-supplied text file and convert it to the Daily dataframe. The file should have two columns, the first dates, the second values.  The dates should be formatted either mm/dd/yyyy or yyyy-mm-dd. Using a 4-digit year is required. This function has the following inputs: filePath, fileName,hasHeader (TRUE/FALSE), separator, qUnit, and interactive (TRUE/FALSE). filePath is a string that defines the path to your file. This can either be a full path, or path relative to your R working directory. The input fileName is a string that defines the file name (including the extension).
+
+Text files that contain this sort of data require some sort of a separator, for example, a 'csv' file (aka 'comma-separated value') file uses a comma to separate the date and value column. A tab delimited file would use a tab ("\verb@\t@") rather than the comma (","). The type of separator you use can be defined in the function call in the 'separator' argument, the default is ",". Another function input is a logical variable: hasHeader.  The default is TRUE. If your data does not have column names, set this variable to FALSE.
+
+Finally, qUnit is a numeric input that defines the discharge/flow units. Flow from the NWIS web results are typically given in cubic feet per second (qUnit=1), but the EGRET package requires flow to be given in cubic meters per second (qUnit=2). Other allowed values are 10^3 cubic feet per second (qUnit=3) and 10^3 cubic meters per second (qUnit=4). If you do not want your data to be converted, use qUnit=2. The default is qUnit=1 (assumes flow is in cubic feet per second).
+
+So, if you have a file called "ChoptankRiverFlow.txt" located in a folder called "RData" on your C drive (this is a Window's example), and the file is structured as follows (tab-separated):
+\begin{verbatim}
+date  Qdaily
+10/1/1999	3.029902561
+10/2/1999	2.406931941
+10/3/1999	2.152080324
+10/4/1999	2.152080324
+10/5/1999	3.19980364
+10/6/1999	2.775050944
+...
+\end{verbatim}
+
+The call to open this file, convert the flow to cubic meters per second, and populate the Daily data frame would be:
+\begin{Schunk}
+\begin{Sinput}
+> fileName <- 'ChoptankRiverFlow.txt'
+> filePath <-  '~/RData/'
+> Daily <- getDailyDataFromFile(filePath,fileName,separator="\t",interactive=FALSE)
+> head(Daily)
+\end{Sinput}
+\begin{Soutput}
+        Date          Q Julian Month Day  DecYear MonthSeq i      LogQ Q7 Q30
+1 1999-10-01 0.08579729  54694    10 274 1999.747     1798 1 -2.455768 NA  NA
+2 1999-10-02 0.06815672  54695    10 275 1999.750     1798 2 -2.685945 NA  NA
+3 1999-10-03 0.06094013  54696    10 276 1999.753     1798 3 -2.797863 NA  NA
+4 1999-10-04 0.06094013  54697    10 277 1999.755     1798 4 -2.797863 NA  NA
+5 1999-10-05 0.09060835  54698    10 278 1999.758     1798 5 -2.401209 NA  NA
+6 1999-10-06 0.07858069  54699    10 279 1999.761     1798 6 -2.543629 NA  NA
+\end{Soutput}
+\end{Schunk}
+
+%------------------------------------------------------------ 
+\subsection{getSampleDataFromFile}
+%------------------------------------------------------------ 
+Similarly to the previous section, getSampleDataFromFile will import a user-generated file and populate the Sample dataframe. The difference between sample data and flow data is that the code requires a third column that contains a remark code, either blank or "<", which will tell the program that the data was 'left-censored' (or, below the detection limit of the sensor). Therefore, the data is required to be in the form: date, remark, value.  If multiple constituents are going to be used, the format can be date, remark_A, value_A, remark_b, value_b, etc... An example of a comma-delimited file would be:
+
+\begin{verbatim}
+cdate;remarkCode;Nitrate
+10/7/1999;;1.4
+11/4/1999;<;0.99
+12/3/1999;;1.42
+1/4/2000;;1.59
+2/3/2000;;1.54
+...
+\end{verbatim}
+The call to open this file, and populate the Sample dataframe would be:
+The call to open this file, convert the flow to cubic meters per second, and populate the Daily data frame would be:
+\begin{Schunk}
+\begin{Sinput}
+> fileName <- 'ChoptankRiverNitrate.csv'
+> filePath <-  '~/RData/'
+> Sample <- getSampleDataFromFile(filePath,fileName,separator=";",interactive=FALSE)
+> head(Sample)
+\end{Sinput}
+\begin{Soutput}
+        Date ConcLow ConcHigh Uncen ConcAve Julian Month Day  DecYear MonthSeq
+1 1999-10-07    1.40     1.40     1    1.40  54700    10 280 1999.764     1798
+2 1999-11-04    0.99     0.99     1    0.99  54728    11 308 1999.840     1799
+3 1999-12-03    1.42     1.42     1    1.42  54757    12 337 1999.919     1800
+4 2000-01-04    1.59     1.59     1    1.59  54789     1   4 2000.010     1801
+5 2000-02-03    1.54     1.54     1    1.54  54819     2  34 2000.092     1802
+6 2000-02-15    1.37     1.37     1    1.37  54831     2  46 2000.124     1802
+        SinDY     CosDY
+1 -0.99631836 0.0857305
+2 -0.84377556 0.5366962
+3 -0.48505985 0.8744810
+4  0.06004896 0.9981954
+5  0.54391895 0.8391378
+6  0.70406552 0.7101350
+\end{Soutput}
+\end{Schunk}
+
+
+
+
 \newpage
 %------------------------------------------------------------ 
 \section{Appendix 1: Getting Started}
@@ -569,7 +662,7 @@ This section shows the returned dataframe structures for the functions.  The req
  $ hole.depth.va        : chr ""
  $ depth.src.cd         : chr ""
  $ project.no           : chr "442400300"
- $ queryTime            : POSIXct, format: "2013-01-24 10:35:51"
+ $ queryTime            : POSIXct, format: "2013-01-24 13:50:02"
 \end{Soutput}
 \end{Schunk}
 
@@ -636,7 +729,7 @@ This section shows the returned dataframe structures for the functions.  The req
  $ local.time.fg        : chr "N"
  $ reliability.cd       : chr ""
  $ project.no           : chr "442400300"
- $ queryTime            : POSIXct, format: "2013-01-24 10:36:02"
+ $ queryTime            : POSIXct, format: "2013-01-24 13:50:14"
  $ drainSqKm            : num 293
  $ staAbbrev            : logi NA
  $ param.nm             : chr "Nitrate plus nitrite, water, filtered, milligrams per liter as nitrogen"
@@ -689,7 +782,7 @@ This section shows the returned dataframe structures for the functions.  The req
 > str(dischargeToday)
 \end{Sinput}
 \begin{Soutput}
-'data.frame':	142 obs. of  6 variables:
+'data.frame':	154 obs. of  6 variables:
  $ agency_cd   : chr  "USGS" "USGS" "USGS" "USGS" ...
  $ site_no     : chr  "01491000" "01491000" "01491000" "01491000" ...
  $ datetime    : POSIXct, format: "2013-01-23 00:00:00" "2013-01-23 00:15:00" ...
